# wakaama

coap/: coap.cmake  transaction.c
coap/cose/: cose.c  cose.h  cose_encrypt0.c  cose_encrypt0.h  cose_header.c  cose_header.h  cose_platform.h  cose_util.c  cose_util.h
coap/cose/backend/: cose_mbedtls.c
coap/er-coap-13/: er-coap-13.c  er-coap-13.h
coap/oscore/: oscore.c  oscore.h  oscore_config.h
coap/oscore/backend/: oscore_mbedtls.c
core/: internals.h  liblwm2m.c  objects.c  observe.c  packet.c  wakaama.cmake
examples/client/: CMakeLists.txt  lwm2mclient.c  lwm2mclient.h  object_oscore.c  object_security.c
examples/server/: CMakeLists.txt  lwm2mserver.c
include/: liblwm2m.h
tests/: CMakeLists.txt  oscore_tests.c  tests.h  unittests.c
